<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/website"
        android:hint="@string/website_to_visit"
        android:layout_marginTop="20dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_web"
        android:text="@string/go_web"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="showContent"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:hint="@string/location_to_visit"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_location"
        android:text="@string/go_loc"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="showContent"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/share_text"
        android:hint="@string/share_text"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_text"
        android:text="@string/sharing_text"
        android:onClick="showContent"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
</LinearLayout>